<resources>
    <string name="app_name">ServiceTech</string>
    <string name="welcome_note">Welcome to ServiceTech,
        a service acquisition app</string>
    <string name="catch_phrase">Unlimited Services on the palms
        of your hands</string>
    <string name="continua">Continue As a;</string>


    <string-array name="technicians">
        <item>Lucius Fox</item>
        <item>Tonny Kross</item>
        <item>Serena Williams</item>
    </string-array>
    <string-array name="Affiliation">
        <item>Networking</item>
        <item>Data Recovery</item>
        <item>Computer Hardware</item>
    </string-array>

    <string-array name="users">
        <item>Judge Judy</item>
        <item>Ramesh Vishwal</item>
        <item>John Dexter</item>
        <item>Ronny Chang</item>
    </string-array>
    <string-array name="items">
        <item>Desktop</item>
        <item>Macbook</item>
    </string-array>
    <string-array name="rItems">
        <item>Monitor</item>
        <item>RJ45</item>
        <item>Cable</item>
    </string-array>
    <string-array name="description">
        <item>Lopus opus dei random text</item>
        <item>lorem ipsum et dolar random text</item>
    </string-array>
    <string-array name="cost">
        <item>Ksh 300</item>
        <item>Ksh 650</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="profile_desc">computer technician</string>
    <string name="profile_mail">examplemail@gmail.com</string>
    <string name="profile_title">Testing Name</string>
    <string name="posts">Completed events</string>
    <string name="read">Articles read</string>
    <string name="written">Articles written</string>
    <string name="credit_score">Credit score</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <string name="article_content"> </string>
    <!-- font families -->
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>