<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="#156804">

        <RelativeLayout
            android:layout_width="@dimen/toolbar_profile_width"
            android:layout_height="wrap_content">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/img_Uprofile"
                android:layout_width="@dimen/toolbar_profile_width"
                android:layout_height="@dimen/toolbar_profile_width"
                android:scaleType="centerInside"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="2dp"
                app:srcCompat="@drawable/pa2" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_family_medium"
            android:text="@string/profile_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/profile_title" />

        <TextView
            android:id="@+id/profile_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:text="@string/profile_mail"
            android:textColor="@color/profile_desc"
            android:textSize="@dimen/profile_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#348103"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="320"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/meta_count"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_condensed"
                    android:text="@string/posts"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/meta_label" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="14"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/meta_count"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_condensed"
                    android:text="@string/read"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/meta_label" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="123"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/meta_count"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_condensed"
                    android:text="@string/credit_score"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/meta_label" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/RegTech"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_baseline_upgrade_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-black"
                        android:text="Register as a technician"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:visibility="visible" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/wallet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_baseline_payment_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-black"
                        android:text="Wallet"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:visibility="visible" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/switchU"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_baseline_person_outline_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-black"
                        android:text="Switch User"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:visibility="visible" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/set"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_baseline_settings_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/action_settings"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:visibility="visible" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/logOut"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_baseline_exit_to_app_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-black"
                        android:text="Log out"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:visibility="visible" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
